--- a/insert-remapper/package.json
+++ b/insert-remapper/package.json
@@ -1,7 +1,7 @@
 {
   "name": "insert-remapper",
   "version": "0.1.0",
-  "description": "Allows inserting arbitrary lines to a generated JS file with a map.",
+  "description": "Allows inserting arbitrary lines to a generated JS file without breaking the existing map.",
   "main": "index.js",
   "scripts": {
     "test": "node tests.js"
@@ -19,5 +19,7 @@
   "dependencies": {
     "source-map": "^0.1.40"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "tsd": "^0.5.7"
+  }
 }
