--- a/insert-remapper/package.json
+++ b/insert-remapper/package.json
@@ -20,6 +20,8 @@
     "source-map": "^0.1.40"
   },
   "devDependencies": {
+    "grunt": "^0.4.5",
+    "grunt-ts": "^1.12.1",
     "tsd": "^0.5.7"
   }
 }
