--- a/insert-remapper/package.json
+++ b/insert-remapper/package.json
@@ -21,6 +21,7 @@
   },
   "devDependencies": {
     "grunt": "^0.4.5",
+    "grunt-execute": "^0.2.2",
     "grunt-ts": "^1.12.1",
     "qunit": "^0.7.5",
     "tsd": "^0.5.7"
