--- a/insert-remapper/package.json
+++ b/insert-remapper/package.json
@@ -21,7 +21,10 @@
   },
   "devDependencies": {
     "grunt": "^0.4.5",
+    "grunt-contrib-connect": "^0.9.0",
+    "grunt-contrib-qunit": "^0.5.2",
     "grunt-ts": "^1.12.1",
+    "qunitjs": "^1.15.0",
     "tsd": "^0.5.7"
   }
 }
