--- a/insert-remapper/package.json
+++ b/insert-remapper/package.json
@@ -21,6 +21,7 @@
   },
   "devDependencies": {
     "grunt": "^0.4.5",
+    "grunt-browserify": "^3.2.1",
     "grunt-contrib-connect": "^0.9.0",
     "grunt-contrib-qunit": "^0.5.2",
     "grunt-ts": "^1.12.1",
