--- a/insert-remapper/package.json
+++ b/insert-remapper/package.json
@@ -23,6 +23,7 @@
     "grunt": "^0.4.5",
     "grunt-browserify": "^3.2.1",
     "grunt-contrib-connect": "^0.9.0",
+    "grunt-contrib-nodeunit": "^0.4.1",
     "grunt-contrib-qunit": "^0.5.2",
     "grunt-ts": "^1.12.1",
     "qunitjs": "^1.15.0",
